syntax = "proto3";

package feedcatter;

import "google/protobuf/timestamp.proto";

option objc_class_prefix = "HLW";

message Food {
    int32 id = 1;
    google.protobuf.Timestamp created_at = 2;
    string name = 3;
    
    enum FoodState {
        STATE_UNSPECIFIED = 0;
        AVAILABLE = 1;
        PARTIALLY_AVAILABLE = 2;
        EATEN = 3;
    }
    FoodState state = 4;
    double available_percentage = 5;
}